deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: kube-latency
    schiff.telekom.de/owner: kube-latency-test
  name: kube-latency
