deployment/daemonset.yaml
---
# Source: kube-latency/templates/deployment-or-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-latency
  namespace: kube-latency
  labels:
    app.kubernetes.io/name: kube-latency
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-latency
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-latency
    spec:
      serviceAccountName: kube-latency
      securityContext:
        runAsNonRoot: true
      containers:
      - name: kube-latency
        image: "kube-latency-image:0.1.1"
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        command:
        - /kube-latency
        - -test-frequency
        - "5"
        - -service-name
        - kube-latency
        ports:
        - containerPort: 8080
          name: metrics
        resources:
            limits:
              ephemeral-storage: 1Mi
              cpu: 1
              memory: 1024Mi
            requests:
              ephemeral-storage: 0Mi
              cpu: 100m
              memory: 128Mi
