deployment/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: kube-latency
  labels:
    app.kubernetes.io/name: kube-latency
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kube-latency
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  egress:
  - {}
